--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,36 @@
-.App {
-  text-align: center;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
+body {
+  background-color: black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.controls {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+button {
+  height: 3em;
+  width: 6em;
+  margin: 1em;
+  font-weight: bold;
+  font-size: 0.5em;
+  text-transform: uppercase;
+  cursor: pointer;
   color: white;
+  border: 1px solid white;
+  background-color: black;
 }
-
-.App-link {
-  color: #09d3ac;
+button:hover {
+  color: black;
+  background-color: #00baff;
+}
+button:focus {
+  border: 1px solid #00baff;
+}
+button:active {
+  background-color: #1f1f1f;
+  color: white;
 }
